# catium_os

./: Cargo.toml  README.md  build.rs
kernel/: Cargo.toml
kernel/src/: lib.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: gdt.rs  idt.rs
kernel/src/framebuffer/: mod.rs  text.rs
