cargo-features = ["per-package-target"]

[package]
name = "catium_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["kernel"] 

[dependencies]
ovmf-prebuilt = "0.1.0-alpha"
bootloader = "0.11.3"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.3"
