[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
bench = false
test = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader_api = "0.11.2"
log = { version = "*", default-features = false }
conquer-once = { version = "0.4.0", default-features = false }
lazy_static = {version = "*", features = ["spin_no_std"]}
spin = "*"
embedded-graphics = "*"


# x86_64 specific (kernel is not support another)
pic8259 = "0.10.1"
bootloader-x86_64-common = "0.11.3"
x86_64 = "*"
